--- a/app/src/assets/css/components/navbar.scss
+++ b/app/src/assets/css/components/navbar.scss
@@ -1,9 +1,10 @@
 .navbar {
   align-items: center;
-  background-color: #0275d8;
+  background-color: white;
+  border-bottom: 1px solid #D3D3D3;
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 2rem;
 
   h1 {
     color: white;
@@ -12,15 +13,21 @@
 
 .header {
   cursor: pointer;
-  color: white;
   font-size: 2rem;
   font-weight: 800;
   text-decoration: none;
 }
 
+.navbar-left {
+  align-items: center;
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 2rem;
+}
+
 .navbar-links {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-auto-flow: column;
   grid-gap: 1rem
 }
 
@@ -28,5 +35,17 @@
   cursor: pointer;
   font-size: 1.25rem;
   text-decoration: none;
-  color: white;
+}
+
+.navbar-login {
+  align-items: center;
+  background-color: #f4f4f4;
+  border-radius: 1rem;
+  cursor: pointer;
+  display: flex;
+  padding: 0.75rem 1rem;
+
+  svg {
+    font-size: 1.5rem;
+  }
 }
